修复商家版关注-被收藏-点击笔记-进入笔记详情界面后点击点赞出现闪退问题修复修复商家版关注-被收藏-点击笔记-进入笔记详情界面后点击评论出现闪退问题修复修复我的分红中，积分兑换点击兑换所有后，可兑换的金额不显示问题优化我的分红界面以及积分兑换等界面修复商家版个人中心-我的门店-基本信息中的次要电话必须输入问题（次要电话可以不输入）修改闪付记录中的金额为4位小数显示

--- a/YuWaShop/Person/SubVC/商务会员/controller/ExchangeViewController.xib
+++ b/YuWaShop/Person/SubVC/商务会员/controller/ExchangeViewController.xib
@@ -35,7 +35,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
-                                <outlet property="delegate" destination="-1" id="Cww-wY-axf"/>
+                                <outlet property="delegate" destination="-1" id="2MA-qi-hW9"/>
                             </connections>
                         </textField>
                     </subviews>
@@ -53,8 +53,8 @@
                     <rect key="frame" x="0.0" y="144" width="375" height="60"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前兑换比例:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQg-xQ-NwV">
-                            <rect key="frame" x="8" y="21.5" width="90" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <rect key="frame" x="8" y="22" width="83.5" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="0.4823529412" green="0.47450980390000003" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
