--- a/YuWaShop/Person/SubVC/商务会员/view/PayDetailView.xib
+++ b/YuWaShop/Person/SubVC/商务会员/view/PayDetailView.xib
@@ -96,7 +96,7 @@
                         <constraint firstItem="g2D-1p-xor" firstAttribute="leading" secondItem="c1h-7K-Dp8" secondAttribute="leading" constant="5" id="wht-hO-5JE"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightToTo.png" translatesAutoresizingMaskIntoConstraints="NO" id="uNx-dT-ebz">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uNx-dT-ebz">
                     <rect key="frame" x="173" y="35" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="Vnh-T7-xx2"/>
@@ -127,7 +127,4 @@
             <point key="canvasLocation" x="51.5" y="-160"/>
         </view>
     </objects>
-    <resources>
-        <image name="rightToTo.png" width="64" height="64"/>
-    </resources>
 </document>
